# granular-configuration-language

./: .dockerignore  .flake8  .gitignore  .local_pylintrc  .sonar_pylintrc  CHANGELOG.md  Dockerfile  Dockerfile3.6  Dockerfile3.7  Dockerfile3.8  MANIFEST.in  Makefile  Pipfile  README.md  README_2.md  README_old.md  conf.py  data.json  docker-compose.yml  endpoint.json  index.rst  pyproject.toml  requirements.txt  run  run_pylint_tests.sh  setup.cfg  setup.py  test_requirements.txt
.github/: renovate.json
.github/workflows/: codeql-analysis.yaml  coverage.yaml  documentation.yaml  linting.yaml  release.yaml  testing.yaml
do/: all  autotest  black  build  clean  format  mypy  package  setup  setup3  teardown  test
doc-spec/: conceptions.md  concepts.md  configuration.md  eagerio.md  getting_started.md  granular_configuration_language.exceptions.rst  granular_configuration_language.proxy.rst  granular_configuration_language.rst  granular_configuration_language.yaml.classes.rst  granular_configuration_language.yaml.decorators.eagerio.rst  granular_configuration_language.yaml.decorators.interpolate.rst  granular_configuration_language.yaml.decorators.ref.rst  granular_configuration_language.yaml.decorators.rst  granular_configuration_language.yaml.file_ops.binary.rst  granular_configuration_language.yaml.file_ops.environment_variable.rst  granular_configuration_language.yaml.file_ops.rst  granular_configuration_language.yaml.file_ops.text.rst  granular_configuration_language.yaml.file_ops.yaml.rst  plugins.md  spec.rst  toc-granular_configuration_language.yaml.file_ops.rst  toc-granular_configuration_language.yaml.rst  yaml.md
doc-spec/_static/: custom.css
granular_configuration/: __init__.py  _build.py  _cache.py  _config.py  _config.pyi  _json.py  _lazy_load.py  _load.py  _locations.py  _merge.py  _s.py  _set_config.py  _set_config.pyi  _utils.py  _yaml_classes.py  base_path.py  exceptions.py  ini_handler.py  testing.py  utils.py  utils.pyi  yaml_handler.py  yaml_handler.pyi
granular_configuration/yaml/: __init__.py  classes.py  decorators.py  v2_handler.py
granular_configuration/yaml/_tags/: __init__.py  _date.py  _del.py  _dict.py  _env.py  _mask.py  _merge.py  _parse_env.py  _parse_file.py  _placeholder.py  _ref.py  _sub.py  _uuid.py  func_and_class.py
granular_configuration/yaml/decorators/: __init__.py  _base.py  ref.py  (+6 more)
granular_configuration/yaml_handler/: __init__.py  classes.py  decorators.py  handler.py  v2_handler.py
granular_configuration_language/: __init__.py  _base_path.py  _build.py  _cache.py  _config.py  _configuration.py  _json.py  _lazy_load.py  _lazy_load_configuration.py  _load.py  _locations.py  _merge.py  _mutable_lazy_load_configuration.py  _utils.py  available_plugins.py  available_tags.py  exceptions.py  proxy.py
granular_configuration_language/proxy/: _proxy.py
granular_configuration_language/yaml/: __init__.py  classes.py
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_0ccec4df2a7d3b25___init___py.html  z_0ccec4df2a7d3b25__constructors_py.html  z_0ccec4df2a7d3b25__external_py.html  z_0ccec4df2a7d3b25__handler_py.html  z_0ccec4df2a7d3b25__load_file_py.html  z_0ccec4df2a7d3b25__load_yaml_string_py.html  z_0ccec4df2a7d3b25__loads_py.html  z_2e07e1b98efb25cd___init___py.html  z_2e07e1b98efb25cd__env_var_parser_py.html  z_2e07e1b98efb25cd__interpolate_py.html  z_313a86d00f99b4c3___init___py.html  z_313a86d00f99b4c3__proxy_py.html  z_3774746a1036a5ec___init___py.html  z_3774746a1036a5ec__environment_variable_py.html  z_37ec800466d8290f___init___py.html  z_37ec800466d8290f__text_py.html  z_59c90ec7fd9b3c91___init___py.html  z_59c90ec7fd9b3c91__base_py.html  z_59c90ec7fd9b3c91__lazy_eval_py.html  z_59c90ec7fd9b3c91__lazy_py.html  z_59c90ec7fd9b3c91__tag_loader_py.html  z_59c90ec7fd9b3c91__tag_set_py.html  z_59c90ec7fd9b3c91__tag_tracker_py.html  z_59c90ec7fd9b3c91__type_checking_py.html  z_59c90ec7fd9b3c91__viewer_py.html  z_59c90ec7fd9b3c91__with_tag_py.html  z_6100a786e144896c___init___py.html  z_6100a786e144896c__parsing_py.html  z_6100a786e144896c_classes_py.html  z_6ceffadcfa5173e4___init___py.html  z_6ceffadcfa5173e4__date_py.html  z_6ceffadcfa5173e4__decimal_py.html  z_6ceffadcfa5173e4__del_py.html  z_6ceffadcfa5173e4__dict_py.html  z_6ceffadcfa5173e4__eager_parse_file_py.html  z_6ceffadcfa5173e4__env_py.html  (+37 more)
tests/: test_base_path.py  test_build_configuration.py  test_cache.py  test_configuration.py  test_documentation_float_tag.py  test_documentation_typed_config.py  test_documentation_yaml_tags.py  test_eager_configuration.py  test_float_tag_documentation.py  test_lazy_config.py  test_locations.py  test_ordered_set.py  test_pickling.py  test_typed_configuration.py  test_yaml_handler.py  test_yaml_merge.py
tests/assets/: base_path1.yaml  base_path2.yaml  merge_root.yaml  mix_config.yaml  parsefile2.yaml  test_env_config.yaml
tests/unit/: test_config.py  test_configuration.py  test_ini_handler.py  test_lazy_config.py  test_locations.py  test_set_config.py  test_yaml_exceptions.py  test_yaml_handler.py  test_yaml_merge.py
tests/yaml/: test_core_behaviors.py  test_decorator_type_checkers.py  test_exceptions.py  test_external_merge.py  test_json.py  test_loop_checking.py  test_tag_plugins.py
tools/: package  unit_test
(+149 files in other folders)
